// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand cell component renders correctly when expanded 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall"
  role="cell"
>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Hide details"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ExpandLessIcon)) />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`Expand cell component renders correctly when not expanded 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall"
  role="cell"
>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Show details"
    className="tour-dataview-expand"
    onClick={[Function]}
  >
    <Memo(ForwardRef(ExpandMoreIcon)) />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
